(architecture) improve docs and better format to save results

--- a/src/notebooks/ihc_numba.ipynb
+++ b/src/notebooks/ihc_numba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -12,28 +12,41 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "🧠 Warm-up Numba (kompilacja JIT)...\n",
-      "✅ Kompilacja zakończona. Start eksperymentu...\n",
+      "Rozgrzewanie Numba (kompilacja JIT)...\n",
+      "Kompilacja zakończona.\n",
       "\n",
       "\n",
-      "📂 Instancja: Dane_TSP_48.xlsx\n",
+      "Instancja: Dane_TSP_76.xlsx\n",
       "\n",
-      "📊 Podsumowanie (pierwsze 10 wierszy):\n",
-      "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  min_cost  mean_runtime\n",
-      "Dane_TSP_48.xlsx       800      6000             1200           two_opt     9883.2    9809.0      1.598655\n",
+      "Łączny czas eksperymentów: 0.87 min (52.26 sek)\n",
       "\n",
-      "📊 Podsumowanie wyników:\n",
-      "                   mean_cost  min_cost  mean_runtime\n",
-      "neighborhood_type                                   \n",
-      "two_opt               9883.2    9809.0         1.599\n",
+      "Podsumowanie (pierwsze 20 wierszy):\n",
+      "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  mean_runtime  min_cost                                                                                                                                                                                                                    min_route\n",
+      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  99089.911      8.701748 98190.641 64-73-72-71-65-66-51-56-55-52-50-49-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-35-38-39-34-40-41-60-59-58-57-61-62-63\n",
       "\n",
-      "🏆 Najlepsze parametry: {'instance': 'Dane_TSP_48.xlsx', 'n_starts': 800, 'max_iter': 6000, 'stop_no_improve': 1200, 'neighborhood_type': 'two_opt', 'mean_cost': 9883.2, 'min_cost': 9809.0, 'mean_runtime': 1.598655008400965}\n",
+      "Podsumowanie statystyczne (średnie po neighborhood_type):\n",
+      "                   mean_cost   min_cost  mean_runtime\n",
+      "neighborhood_type                                    \n",
+      "two_opt            99089.911  98190.641         8.702\n",
       "\n",
-      "✅ Eksperyment zakończony pomyślnie.\n"
+      "Najlepsze parametry:\n",
+      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 99089.911, 'mean_runtime': 8.701747652500975, 'min_cost': 98190.641, 'min_route': '64-73-72-71-65-66-51-56-55-52-50-49-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-35-38-39-34-40-41-60-59-58-57-61-62-63'}\n"
      ]
     }
    ],
    "source": [
+    "# SKRYPT EKSPERYMENTALNY\n",
+    "# Uruchamia serię eksperymentów z różnymi parametrami algorytmu,\n",
+    "# zapisuje statystyki dla każdej kombinacji oraz mierzy pełny\n",
+    "# czas działania. Dane wynikowe trafiają do pliku CSV.\n",
+    "#\n",
+    "# Główne elementy:\n",
+    "#   - rozgrzanie kompilatora Numba (aby uniknąć narzutu JIT)\n",
+    "#   - wielokrotne uruchamianie algorytmu z tymi samymi parametrami\n",
+    "#   - wyznaczanie średnich kosztów i czasów\n",
+    "#   - zapisywanie najlepszej (minimalnej) trasy\n",
+    "#   - zapis wyników przy użyciu save_experiment_results()\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -44,48 +57,52 @@
     "from src.algorithms.ihc_numba import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "\n",
-    "# ==============================================================\n",
-    "# EKSPERYMENT DLA ALGORYTMU ITERATIVE HILL CLIMBING (IHC)\n",
-    "# ==============================================================\n",
-    "# Sprawdza wpływ parametrów:\n",
-    "#   - n_starts\n",
-    "#   - max_iter\n",
-    "#   - stop_no_improve\n",
-    "#   - neighborhood_type\n",
-    "# ==============================================================\n",
     "\n",
-    "TSP_FILES = [\"Dane_TSP_48.xlsx\"]\n",
+    "# USTAWIENIA\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
+    "\n",
+    "PARAM_GRID = {\n",
+    "    \"n_starts\": [1600],         # liczba restartów wspinaczki\n",
+    "    \"max_iter\": [16000],        # liczba iteracji jednej wspinaczki\n",
+    "    \"stop_no_improve\": [1600],  # limit stagnacji\n",
+    "    \"neighborhood_type\": [\"two_opt\"],\n",
+    "}\n",
     "# PARAM_GRID = {\n",
     "#     \"n_starts\": [5, 10, 20, 50], # liczba losowych restartów wspinaczki\n",
     "#     \"max_iter\": [100, 500, 1000], # maksymalna liczba iteracji jednej wspinaczki\n",
     "#     \"stop_no_improve\": [10, 50, 100], # ile kroków bez poprawy kończy wspinaczkę\n",
-    "#     # \"neighborhood_type\": [\"swap\", \"insert\", \"two_opt\"],\n",
-    "#     \"neighborhood_type\": [\"two_opt\"],\n",
+    "#     \"neighborhood_type\": [\"swap\", \"insert\", \"two_opt\"],\n",
     "# }\n",
-    "PARAM_GRID = {\n",
-    "    \"n_starts\": [800], # liczba losowych restartów wspinaczki\n",
-    "    \"max_iter\": [6000], # maksymalna liczba iteracji jednej wspinaczki\n",
-    "    \"stop_no_improve\": [1200], # ile kroków bez poprawy kończy wspinaczkę\n",
-    "    \"neighborhood_type\": [\"two_opt\"],\n",
-    "}\n",
-    "REPEATS = 5\n",
-    "results = []\n",
     "\n",
-    "print(\"🧠 Warm-up Numba (kompilacja JIT)...\")\n",
+    "REPEATS = 6   # liczba powtórzeń dla każdej kombinacji parametrów\n",
+    "results = []  # tablica na wyniki\n",
+    "\n",
+    "\n",
+    "# ROZGRZANIE NUMBA (KOMPILACJA JIT)\n",
+    "print(\"Rozgrzewanie Numba (kompilacja JIT)...\")\n",
     "D = load_tsp_matrix(TSP_FILES[0])\n",
     "_ = solve_tsp(D, {\"n_starts\": 2})\n",
-    "print(\"✅ Kompilacja zakończona. Start eksperymentu...\\n\")\n",
+    "print(\"Kompilacja zakończona.\\n\")\n",
+    "\n",
+    "\n",
+    "# GŁÓWNA PĘTLA\n",
+    "start_total = time.perf_counter()\n",
     "\n",
     "for tsp_file in TSP_FILES:\n",
-    "    print(f\"\\n📂 Instancja: {tsp_file}\")\n",
+    "    print(f\"\\nInstancja: {tsp_file}\")\n",
     "    D = load_tsp_matrix(tsp_file)\n",
     "\n",
     "    for n_starts in PARAM_GRID[\"n_starts\"]:\n",
     "        for max_iter in PARAM_GRID[\"max_iter\"]:\n",
     "            for stop_no_improve in PARAM_GRID[\"stop_no_improve\"]:\n",
     "                for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
-    "                    costs, runtimes = [], []\n",
     "\n",
+    "                    costs = []\n",
+    "                    runtimes = []\n",
+    "                    best_route_overall = None\n",
+    "                    min_cost = float(\"inf\")\n",
+    "\n",
+    "                    # wielokrotne powtórzenia\n",
     "                    for _ in range(REPEATS):\n",
     "                        params = {\n",
     "                            \"n_starts\": n_starts,\n",
@@ -93,13 +110,23 @@
     "                            \"stop_no_improve\": stop_no_improve,\n",
     "                            \"neighborhood_type\": neighborhood_type,\n",
     "                        }\n",
+    "\n",
     "                        start_t = time.perf_counter()\n",
-    "                        route, cost, runtime, meta = solve_tsp(D, params)\n",
+    "                        route, cost, _, _ = solve_tsp(D, params)\n",
     "                        total_time = time.perf_counter() - start_t\n",
     "\n",
     "                        costs.append(cost)\n",
     "                        runtimes.append(total_time)\n",
     "\n",
+    "                        # zapamiętujemy najlepszą trasę z powtórzeń\n",
+    "                        if cost < min_cost:\n",
+    "                            min_cost = cost\n",
+    "                            best_route_overall = route\n",
+    "\n",
+    "                    # zapis najlepszego route jako string\n",
+    "                    route_str = \"-\".join(map(str, best_route_overall))\n",
+    "\n",
+    "                    # dodanie wiersza wyników\n",
     "                    results.append({\n",
     "                        \"instance\": tsp_file,\n",
     "                        \"n_starts\": n_starts,\n",
@@ -107,21 +134,39 @@
     "                        \"stop_no_improve\": stop_no_improve,\n",
     "                        \"neighborhood_type\": neighborhood_type,\n",
     "                        \"mean_cost\": round(np.mean(costs), 3),\n",
-    "                        \"min_cost\": round(np.min(costs), 3),\n",
     "                        \"mean_runtime\": np.mean(runtimes),\n",
+    "                        \"min_cost\": round(min_cost, 3),\n",
+    "                        \"min_route\": route_str,\n",
     "                    })\n",
     "\n",
-    "# --- zapis wyników ---\n",
-    "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, filename=\"ihc_experiment_results.csv\", subfolder=\"IHC\")\n",
     "\n",
-    "# --- raport ---\n",
-    "print(\"\\n📊 Podsumowanie wyników:\")\n",
-    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]].mean().round(3))\n",
+    "# PODSUMOWANIE I ZAPIS WYNIKÓW\n",
+    "end_total = time.perf_counter()\n",
+    "elapsed = end_total - start_total\n",
+    "\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"IHC\")\n",
+    "\n",
+    "\n",
+    "# RAPORT\n",
+    "print(\"\\nPodsumowanie statystyczne (średnie po neighborhood_type):\")\n",
+    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]]\n",
+    "      .mean().round(3))\n",
     "\n",
     "best = df.loc[df[\"mean_cost\"].idxmin()]\n",
-    "print(f\"\\n🏆 Najlepsze parametry: {best.to_dict()}\")\n",
-    "print(\"\\n✅ Eksperyment zakończony pomyślnie.\")\n"
+    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")\n",
+    "\n",
+    "# Minimalne wyniki dla sprawdzenia\n",
+    "# ---------- python\n",
+    "# 177_408.05\n",
+    "# 113_232.504\n",
+    "# 101_052.592\n",
+    "# 97_959.335\n",
+    "# ---------- excel\n",
+    "# 119_028.44\n",
+    "# 111_729.62"
    ]
   }
  ],
