--- a/src/notebooks/nn.ipynb
+++ b/src/notebooks/nn.ipynb
@@ -11,39 +11,54 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📂 Przetwarzanie instancji: Dane_TSP_48.xlsx\n",
+      "📂 Przetwarzanie instancji: Dane_TSP_76.xlsx\n",
       "\n",
-      "📊 Podsumowanie (pierwsze 10 wierszy):\n",
-      "        instance  start_city    cost  runtime\n",
-      "Dane_TSP_48.xlsx           0 12692.0 0.425929\n",
-      "Dane_TSP_48.xlsx           1 13531.0 0.000168\n",
-      "Dane_TSP_48.xlsx           2 13926.0 0.000128\n",
-      "Dane_TSP_48.xlsx           3 13035.0 0.000119\n",
-      "Dane_TSP_48.xlsx           4 14745.0 0.000119\n",
-      "Dane_TSP_48.xlsx           5 14017.0 0.000119\n",
-      "Dane_TSP_48.xlsx           6 13764.0 0.000117\n",
-      "Dane_TSP_48.xlsx           7 13479.0 0.000117\n",
-      "Dane_TSP_48.xlsx           8 12692.0 0.000119\n",
-      "Dane_TSP_48.xlsx           9 12791.0 0.000118\n",
+      "Podsumowanie (pierwsze 20 wierszy):\n",
+      "        instance  start_city          cost  runtime\n",
+      "Dane_TSP_76.xlsx           0 137263.626267 0.445025\n",
+      "Dane_TSP_76.xlsx           1 152346.888513 0.000261\n",
+      "Dane_TSP_76.xlsx           2 152034.932089 0.000205\n",
+      "Dane_TSP_76.xlsx           3 152892.222986 0.000194\n",
+      "Dane_TSP_76.xlsx           4 152424.658151 0.000193\n",
+      "Dane_TSP_76.xlsx           5 153491.807375 0.000192\n",
+      "Dane_TSP_76.xlsx           6 150295.578431 0.000193\n",
+      "Dane_TSP_76.xlsx           7 150488.574452 0.000194\n",
+      "Dane_TSP_76.xlsx           8 151515.026523 0.000191\n",
+      "Dane_TSP_76.xlsx           9 156155.190883 0.000193\n",
+      "Dane_TSP_76.xlsx          10 151965.322064 0.000192\n",
+      "Dane_TSP_76.xlsx          11 153251.670024 0.000191\n",
+      "Dane_TSP_76.xlsx          12 153131.377287 0.000191\n",
+      "Dane_TSP_76.xlsx          13 153176.810202 0.000194\n",
+      "Dane_TSP_76.xlsx          14 155871.911612 0.000227\n",
+      "Dane_TSP_76.xlsx          15 155760.247806 0.000216\n",
+      "Dane_TSP_76.xlsx          16 155155.253730 0.000191\n",
+      "Dane_TSP_76.xlsx          17 153577.133309 0.000193\n",
+      "Dane_TSP_76.xlsx          18 153305.822602 0.000189\n",
+      "Dane_TSP_76.xlsx          19 151249.672020 0.000190\n",
       "\n",
-      "📈 Statystyki zbiorcze:\n",
-      "       start_city       cost  runtime\n",
-      "count      49.000     49.000   49.000\n",
-      "mean       24.000  13527.245    0.009\n",
-      "std        14.289    604.172    0.061\n",
-      "min         0.000  12301.000    0.000\n",
-      "25%        12.000  13062.000    0.000\n",
-      "50%        24.000  13482.000    0.000\n",
-      "75%        36.000  13770.000    0.000\n",
-      "max        48.000  15026.000    0.426\n",
+      "Statystyki zbiorcze:\n",
+      "       start_city        cost  runtime\n",
+      "count      77.000      77.000   77.000\n",
+      "mean       38.000  148656.546    0.006\n",
+      "std        22.372    4304.672    0.051\n",
+      "min         0.000  137263.626    0.000\n",
+      "25%        19.000  145895.862    0.000\n",
+      "50%        38.000  149128.509    0.000\n",
+      "75%        57.000  151965.322    0.000\n",
+      "max        76.000  156789.757    0.445\n",
       "\n",
-      "🏆 Najlepsze miasto startowe: 38 (koszt 12301.00)\n",
-      "💀 Najgorsze miasto startowe: 35 (koszt 15026.00)\n",
-      "✅ Eksperyment zakończony pomyślnie.\n"
+      "Najlepsze miasto startowe: 0 (koszt 137263.63)\n",
+      "Najgorsze miasto startowe: 75 (koszt 156789.76)\n"
      ]
     }
    ],
    "source": [
+    "# SKRYPT EKSPERYMENTALNY\n",
+    "# Uruchamia analizę algorytmu Najbliższego Sąsiada (NN)\n",
+    "# dla wszystkich możliwych miast startowych. Wyniki obejmują\n",
+    "# koszt trasy, czas wykonania oraz identyfikację najlepszych\n",
+    "# i najgorszych wyników. Dane zapisywane są do pliku CSV.\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -53,20 +68,21 @@
     "from src.algorithms.nn import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "\n",
-    "# ==============================================================\n",
-    "# EKSPERYMENT DLA ALGORYTMU NAJBLIŻSZEGO SĄSIADA (NN)\n",
-    "# ==============================================================\n",
-    "# Celem: analiza wpływu miasta startowego na długość trasy.\n",
-    "# ==============================================================\n",
     "\n",
-    "TSP_FILES = [\"Dane_TSP_48.xlsx\"]\n",
+    "# USTAWIENIA\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "results = []\n",
     "\n",
-    "for tsp_file in TSP_FILES:\n",
-    "    print(f\"\\n📂 Przetwarzanie instancji: {tsp_file}\")\n",
-    "    D = load_tsp_matrix(tsp_file)\n",
     "\n",
-    "    for start_city in range(D.shape[0]):\n",
+    "# GŁÓWNA PĘTLA\n",
+    "start_total = time.perf_counter()\n",
+    "\n",
+    "for tsp_file in TSP_FILES:\n",
+    "    print(f\"\\nInstancja: {tsp_file}\")\n",
+    "    D = load_tsp_matrix(tsp_file)\n",
+    "    n = D.shape[0]\n",
+    "\n",
+    "    for start_city in range(n):\n",
     "        params = {\"start_city\": start_city}\n",
     "\n",
     "        start_t = time.perf_counter()\n",
@@ -80,20 +96,26 @@
     "            \"runtime\": total_time,\n",
     "        })\n",
     "\n",
-    "# --- zapis wyników ---\n",
-    "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, filename=\"nn_experiment_results.csv\", subfolder=\"NN\")\n",
     "\n",
-    "# --- raport ---\n",
-    "print(\"\\n📈 Statystyki zbiorcze:\")\n",
+    "# ZAPIS WYNIKÓW\n",
+    "end_total = time.perf_counter()\n",
+    "elapsed = end_total - start_total\n",
+    "\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"NN\")\n",
+    "\n",
+    "\n",
+    "# RAPORT\n",
+    "print(\"\\nStatystyki zbiorcze:\")\n",
     "print(df.describe().round(3))\n",
     "\n",
     "best = df.loc[df[\"cost\"].idxmin()]\n",
     "worst = df.loc[df[\"cost\"].idxmax()]\n",
     "\n",
-    "print(f\"\\n🏆 Najlepsze miasto startowe: {best.start_city} (koszt {best.cost:.2f})\")\n",
-    "print(f\"💀 Najgorsze miasto startowe: {worst.start_city} (koszt {worst.cost:.2f})\")\n",
-    "print(\"✅ Eksperyment zakończony pomyślnie.\")\n"
+    "print(f\"\\nNajlepsze miasto startowe: {best.start_city} (koszt {best.cost:.2f})\")\n",
+    "print(f\"Najgorsze miasto startowe: {worst.start_city} (koszt {worst.cost:.2f})\")"
    ]
   }
  ],
