--- a/src/notebooks/sa_numba.ipynb
+++ b/src/notebooks/sa_numba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -10,30 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "🧠 Warm-up Numba (kompilacja JIT)...\n",
-      "✅ Kompilacja zakończona. Start eksperymentu...\n",
+      "Warm-up Numba (kompilacja JIT)...\n",
+      "Kompilacja zakończona. Start eksperymentu...\n",
       "\n",
       "\n",
-      "📂 Instancja: Dane_TSP_48.xlsx\n",
+      "Instancja: Dane_TSP_76.xlsx\n",
       "\n",
-      "📊 Podsumowanie (pierwsze 10 wierszy):\n",
+      "Podsumowanie (pierwsze 20 wierszy):\n",
       "        instance   T0    alpha  T_min  max_iter neighborhood_type  mean_cost  min_cost  mean_runtime\n",
-      "Dane_TSP_48.xlsx 5000 0.999999 0.0001  10000000           two_opt     9816.8    9809.0      3.915615\n",
+      "Dane_TSP_76.xlsx 5000 0.999999 0.0001  10000000           two_opt  99192.872 97919.087      4.681982\n",
       "\n",
-      "📊 Podsumowanie wyników:\n",
-      "                   mean_cost  min_cost  mean_runtime\n",
-      "neighborhood_type                                   \n",
-      "two_opt               9816.8    9809.0         3.916\n",
+      "Podsumowanie wyników:\n",
+      "                   mean_cost   min_cost  mean_runtime\n",
+      "neighborhood_type                                    \n",
+      "two_opt            99192.872  97919.087         4.682\n",
       "\n",
-      "🏆 Najlepsze parametry: {'instance': 'Dane_TSP_48.xlsx', 'T0': 5000, 'alpha': 0.999999, 'T_min': 0.0001, 'max_iter': 10000000, 'neighborhood_type': 'two_opt', 'mean_cost': 9816.8, 'min_cost': 9809.0, 'mean_runtime': 3.915614941601234}\n",
-      "\n",
-      "✅ Eksperyment zakończony pomyślnie.\n"
+      "Najlepsze parametry: {'instance': 'Dane_TSP_76.xlsx', 'T0': 5000, 'alpha': 0.999999, 'T_min': 0.0001, 'max_iter': 10000000, 'neighborhood_type': 'two_opt', 'mean_cost': 99192.872, 'min_cost': 97919.087, 'mean_runtime': 4.681982425200113}\n"
      ]
     }
    ],
    "source": [
+    "# SKRYPT EKSPERYMENTALNY\n",
+    "# Uruchamia analizę algorytmu Symulowanego Wyżarzania (SA)\n",
+    "# dla różnych zestawów parametrów. Dla każdej konfiguracji\n",
+    "# wykonywanych jest kilka powtórzeń, zapisywany jest koszt,\n",
+    "# czas wykonania oraz średnie statystyki. Wyniki trafiają\n",
+    "# do pliku CSV przy użyciu save_experiment_results().\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -44,33 +47,9 @@
     "from src.algorithms.sa_numba import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "\n",
-    "# ==============================================================\n",
-    "# EKSPERYMENT DLA ALGORYTMU SYMULOWANEGO WYŻARZANIA (SA)\n",
-    "# ==============================================================\n",
-    "# Parametry badane:\n",
-    "#   - temperatura początkowa (T0)\n",
-    "#   - współczynnik chłodzenia (alpha)\n",
-    "#   - maksymalna liczba iteracji\n",
-    "#   - minimalna temperatura\n",
-    "#   - rodzaj sąsiedztwa\n",
-    "# ==============================================================\n",
     "\n",
-    "TSP_FILES = [\"Dane_TSP_48.xlsx\"]\n",
-    "\n",
-    "# PARAM_GRID = {\n",
-    "#     \"T0\": [500, 1000, 2000, 5000],\n",
-    "#     \"alpha\": [0.99, 0.97, 0.95, 0.90],\n",
-    "#     \"T_min\": [0.1],\n",
-    "#     \"max_iter\": [2000, 5000],\n",
-    "#     \"neighborhood_type\": [\"swap\", \"two_opt\", \"insert\"],\n",
-    "# }\n",
-    "# | Parametr              | Znaczenie       | Kierunek poprawy                                 |\n",
-    "# | --------------------- | --------------- | ------------------------------------------------ |\n",
-    "# | **α**                 | ⭐⭐⭐⭐ największy | zwiększ (wolniejsze chłodzenie, np. 0.995–0.999) |\n",
-    "# | **T₀**                | ⭐⭐⭐             | zwiększ (więcej eksploracji)                     |\n",
-    "# | **max_iter**          | ⭐⭐              | zwiększ (więcej prób, ale kosztem czasu)         |\n",
-    "# | **T_min**             | ⭐               | bez znaczenia w typowych zakresach               |\n",
-    "# | **neighborhood_type** | ⭐⭐⭐             | ustaw na `two_opt`                               |\n",
+    "# USTAWIENIA\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
     "    \"T0\": [5000],\n",
@@ -79,18 +58,23 @@
     "    \"max_iter\": [10_000_000],\n",
     "    \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
-    "REPEATS = 5\n",
+    "\n",
+    "REPEATS = 6\n",
     "results = []\n",
     "\n",
-    "# --- Warm-up dla Numba ---\n",
-    "print(\"🧠 Warm-up Numba (kompilacja JIT)...\")\n",
+    "\n",
+    "# ROZGRZANIE NUMBA (KOMPILACJA JIT)\n",
+    "print(\"Rozgrzewanie Numba (kompilacja JIT)...\")\n",
     "D = load_tsp_matrix(TSP_FILES[0])\n",
     "_ = solve_tsp(D, {\"T0\": 1000, \"max_iter\": 100, \"neighborhood_type\": \"swap\"})\n",
-    "print(\"✅ Kompilacja zakończona. Start eksperymentu...\\n\")\n",
+    "print(\"Kompilacja zakończona.\\n\")\n",
     "\n",
-    "# --- Eksperyment właściwy ---\n",
+    "\n",
+    "# GŁÓWNA PĘTLA\n",
+    "start_total = time.perf_counter()\n",
+    "\n",
     "for tsp_file in TSP_FILES:\n",
-    "    print(f\"\\n📂 Instancja: {tsp_file}\")\n",
+    "    print(f\"\\nInstancja: {tsp_file}\")\n",
     "    D = load_tsp_matrix(tsp_file)\n",
     "\n",
     "    for T0 in PARAM_GRID[\"T0\"]:\n",
@@ -98,7 +82,9 @@
     "            for T_min in PARAM_GRID[\"T_min\"]:\n",
     "                for max_iter in PARAM_GRID[\"max_iter\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
-    "                        costs, runtimes = [], []\n",
+    "\n",
+    "                        costs = []\n",
+    "                        runtimes = []\n",
     "\n",
     "                        for _ in range(REPEATS):\n",
     "                            params = {\n",
@@ -128,17 +114,25 @@
     "                            \"mean_runtime\": np.mean(runtimes),\n",
     "                        })\n",
     "\n",
-    "# --- zapis wyników ---\n",
-    "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, filename=\"sa_experiment_results.csv\", subfolder=\"SA\")\n",
     "\n",
-    "# --- raport ---\n",
-    "print(\"\\n📊 Podsumowanie wyników:\")\n",
-    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]].mean().round(3))\n",
+    "# ZAPIS WYNIKÓW\n",
+    "end_total = time.perf_counter()\n",
+    "elapsed = end_total - start_total\n",
+    "\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"SA\")\n",
+    "\n",
+    "\n",
+    "# RAPORT\n",
+    "print(\"\\nPodsumowanie wyników:\")\n",
+    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]]\n",
+    "      .mean()\n",
+    "      .round(3))\n",
     "\n",
     "best = df.loc[df[\"mean_cost\"].idxmin()]\n",
-    "print(f\"\\n🏆 Najlepsze parametry: {best.to_dict()}\")\n",
-    "print(\"\\n✅ Eksperyment zakończony pomyślnie.\")\n"
+    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")"
    ]
   }
  ],
