--- a/src/notebooks/tabu_numba.ipynb
+++ b/src/notebooks/tabu_numba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -12,28 +12,32 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "🧠 Warm-up Numba (kompilacja JIT)...\n",
-      "✅ Kompilacja zakończona. Start eksperymentu...\n",
+      "Warm-up Numba (kompilacja JIT)...\n",
+      "Kompilacja zakończona. Start eksperymentu...\n",
       "\n",
       "\n",
-      "📂 Instancja: Dane_TSP_48.xlsx\n",
+      "Instancja: Dane_TSP_76.xlsx\n",
       "\n",
-      "📊 Podsumowanie (pierwsze 10 wierszy):\n",
-      "        instance  max_iter  stop_no_improve  tabu_tenure  n_neighbors neighborhood_type  mean_cost  min_cost  mean_runtime\n",
-      "Dane_TSP_48.xlsx  10000000            10000           25           50           two_opt    10094.0   10019.0     10.968357\n",
+      "Podsumowanie (pierwsze 20 wierszy):\n",
+      "        instance  max_iter  stop_no_improve  tabu_tenure  n_neighbors neighborhood_type  mean_cost   min_cost  mean_runtime\n",
+      "Dane_TSP_76.xlsx 100000000           100000           25          100           two_opt 100233.511 100057.337    134.947954\n",
       "\n",
-      "📊 Podsumowanie wyników (średnie wg typu sąsiedztwa):\n",
-      "                   mean_cost  min_cost  mean_runtime\n",
-      "neighborhood_type                                   \n",
-      "two_opt              10094.0   10019.0        10.968\n",
+      "Podsumowanie wyników (średnie wg typu sąsiedztwa):\n",
+      "                    mean_cost    min_cost  mean_runtime\n",
+      "neighborhood_type                                      \n",
+      "two_opt            100233.511  100057.337       134.948\n",
       "\n",
-      "🏆 Najlepsze parametry: {'instance': 'Dane_TSP_48.xlsx', 'max_iter': 10000000, 'stop_no_improve': 10000, 'tabu_tenure': 25, 'n_neighbors': 50, 'neighborhood_type': 'two_opt', 'mean_cost': 10094.0, 'min_cost': 10019.0, 'mean_runtime': 10.968356777331792}\n",
-      "\n",
-      "✅ Eksperyment zakończony pomyślnie.\n"
+      "Najlepsze parametry: {'instance': 'Dane_TSP_76.xlsx', 'max_iter': 100000000, 'stop_no_improve': 100000, 'tabu_tenure': 25, 'n_neighbors': 100, 'neighborhood_type': 'two_opt', 'mean_cost': 100233.511, 'min_cost': 100057.337, 'mean_runtime': 134.94795376399875}\n"
      ]
     }
    ],
    "source": [
+    "# SKRYPT EKSPERYMENTALNY\n",
+    "# Uruchamia analizę algorytmu Tabu Search (TS) dla różnych\n",
+    "# konfiguracji parametrów. Dla każdej kombinacji wykonywane jest\n",
+    "# kilka powtórzeń, zapisywane są statystyki jakości oraz czas\n",
+    "# działania. Wyniki trafiają do pliku CSV.\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -44,54 +48,34 @@
     "from src.algorithms.tabu import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "\n",
-    "# ==============================================================\n",
-    "# EKSPERYMENT DLA ALGORYTMU TABU SEARCH (TS)\n",
-    "# ==============================================================\n",
-    "# Badane parametry:\n",
-    "#   - max_iter          → liczba iteracji algorytmu\n",
-    "#   - stop_no_improve   → ile iteracji bez poprawy kończy poszukiwania\n",
-    "#   - tabu_tenure       → długość listy tabu\n",
-    "#   - n_neighbors       → liczba sąsiadów testowanych w każdej iteracji\n",
-    "#   - neighborhood_type → rodzaj operatora sąsiedztwa (swap, insert, two_opt)\n",
-    "#\n",
-    "# Wyniki:\n",
-    "#   - mean_cost, min_cost, mean_runtime\n",
-    "#   - zapisane do CSV w katalogu /results/TS/\n",
-    "# ==============================================================\n",
     "\n",
-    "TSP_FILES = [\"Dane_TSP_48.xlsx\"]\n",
+    "# USTAWIENIA\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "\n",
-    "# PARAM_GRID = {\n",
-    "#     \"max_iter\": [2000, 5000],           # maksymalna liczba iteracji\n",
-    "#     \"stop_no_improve\": [200, 500],      # ile iteracji bez poprawy kończy algorytm\n",
-    "#     \"tabu_tenure\": [5, 10, 15],         # długość listy tabu\n",
-    "#     \"n_neighbors\": [10, 30, 50],        # liczba sąsiadów sprawdzanych w każdej iteracji\n",
-    "#     \"neighborhood_type\": [\"two_opt\"],   # operator sąsiedztwa (najlepszy jakościowo)\n",
-    "# }\n",
     "PARAM_GRID = {\n",
-    "    \"max_iter\": [10_000_000],           # maksymalna liczba iteracji\n",
-    "    \"stop_no_improve\": [10_000],      # ile iteracji bez poprawy kończy algorytm\n",
-    "    \"tabu_tenure\": [25],         # długość listy tabu\n",
-    "    \"n_neighbors\": [50],        # liczba sąsiadów sprawdzanych w każdej iteracji\n",
-    "    \"neighborhood_type\": [\"two_opt\"],   # operator sąsiedztwa (najlepszy jakościowo)\n",
+    "    \"max_iter\": [100_000_000],\n",
+    "    \"stop_no_improve\": [100_000],\n",
+    "    \"tabu_tenure\": [25],\n",
+    "    \"n_neighbors\": [100],\n",
+    "    \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
     "\n",
-    "REPEATS = 3  # powtórzenia dla stabilności wyników\n",
+    "REPEATS = 3\n",
     "results = []\n",
     "\n",
-    "# --------------------------------------------------------------\n",
-    "# 1️⃣ Warm-up Numba — kompilacja JIT (uniknięcie długiego 1. przebiegu)\n",
-    "# --------------------------------------------------------------\n",
-    "print(\"🧠 Warm-up Numba (kompilacja JIT)...\")\n",
+    "\n",
+    "# ROZGRZANIE (KOMPILACJA JIT JEŚLI WYSTĘPUJE)\n",
+    "print(\"Rozgrzewanie (kompilacja JIT jeśli dotyczy)...\")\n",
     "D = load_tsp_matrix(TSP_FILES[0])\n",
     "_ = solve_tsp(D, {\"max_iter\": 5, \"tabu_tenure\": 3, \"n_neighbors\": 5})\n",
-    "print(\"✅ Kompilacja zakończona. Start eksperymentu...\\n\")\n",
+    "print(\"Kompilacja zakończona.\\n\")\n",
     "\n",
-    "# --------------------------------------------------------------\n",
-    "# 2️⃣ Główna pętla eksperymentu\n",
-    "# --------------------------------------------------------------\n",
+    "\n",
+    "# GŁÓWNA PĘTLA\n",
+    "start_total = time.perf_counter()\n",
+    "\n",
     "for tsp_file in TSP_FILES:\n",
-    "    print(f\"\\n📂 Instancja: {tsp_file}\")\n",
+    "    print(f\"\\nInstancja: {tsp_file}\")\n",
     "    D = load_tsp_matrix(tsp_file)\n",
     "\n",
     "    for max_iter in PARAM_GRID[\"max_iter\"]:\n",
@@ -100,7 +84,8 @@
     "                for n_neighbors in PARAM_GRID[\"n_neighbors\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
     "\n",
-    "                        costs, runtimes = [], []\n",
+    "                        costs = []\n",
+    "                        runtimes = []\n",
     "\n",
     "                        for _ in range(REPEATS):\n",
     "                            params = {\n",
@@ -118,7 +103,6 @@
     "                            costs.append(cost)\n",
     "                            runtimes.append(total_time)\n",
     "\n",
-    "                        # zapis pojedynczego zestawu parametrów\n",
     "                        results.append({\n",
     "                            \"instance\": tsp_file,\n",
     "                            \"max_iter\": max_iter,\n",
@@ -131,18 +115,25 @@
     "                            \"mean_runtime\": np.mean(runtimes),\n",
     "                        })\n",
     "\n",
-    "# --------------------------------------------------------------\n",
-    "# 3️⃣ Zapis wyników do pliku i raport w konsoli\n",
-    "# --------------------------------------------------------------\n",
-    "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, filename=\"tabu_experiment_results.csv\", subfolder=\"TS\")\n",
     "\n",
-    "print(\"\\n📊 Podsumowanie wyników (średnie wg typu sąsiedztwa):\")\n",
-    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]].mean().round(3))\n",
+    "# ZAPIS WYNIKÓW\n",
+    "end_total = time.perf_counter()\n",
+    "elapsed = end_total - start_total\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"TS\")\n",
+    "\n",
+    "\n",
+    "# RAPORT\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "\n",
+    "print(\"\\nPodsumowanie wyników:\")\n",
+    "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]]\n",
+    "      .mean()\n",
+    "      .round(3))\n",
     "\n",
     "best = df.loc[df[\"mean_cost\"].idxmin()]\n",
-    "print(f\"\\n🏆 Najlepsze parametry: {best.to_dict()}\")\n",
-    "print(\"\\n✅ Eksperyment zakończony pomyślnie.\")\n"
+    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")"
    ]
   }
  ],
